<resources>
    <string name="app_name">MyWallet</string>

    <!-- Strings para a tela de login-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="cadastre">Não tem conta? Cadastre-se</string>
    <string name="google">Google +</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>

    <!-- Strings para a tela de cadastro-->
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_toolbar_cadastrar">CADASTRAR</string>

    <!-- Strings para fragments-->
    <string name="txt_home">Home</string>
    <string name="txt_entradas">Entradas</string>
    <string name="txt_gastos">Gastos</string>
    <string name="txt_fragment_detail_gastos">Detalhes dos gastos</string>
    <string name="datail_gastos">Detalhes de gastos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_ajuda">Ajuda</string>
</resources>